Version 1.2 alpha (2016-8-?):
* Added
  - XDF method
  - GAMESS WFN wirter


Version 1.1 (2016-6-4):
* Modify
  - "unc-" prefix for uncontracted basis in the input
  - linear dependence problem in mcscf.project_init_guess
* Bug fixing
  - CCSD(T) rdm
  - CASCI.analyze for multiple CI roots
  - function to write FCIDUMP when system has symmetry


Version 1.1 beta (2016-4-11):
* Added
  - Orbital hessian for SCF Newton solver
  - (maximum overlap method) for Delta SCF
  - determinant overlap
  - Canonicalization flag for Newton solver
* Modify
  - Default density fitting basis for heavy atoms
  - Density fitting MCSCF to allow inputing 3-center integrals
  - Rewriting NEVPT2 interface
  - Mole object serialization with json
  - Orbital energy output format for ROHF
* Bug fixing
  - meta-lowdin orthogonalization for high angular memontum basis
  - Orbital occupancy for ROHF with symmetry
  - CASSCF initializing from x2c-UHF
  - ECP accuracy
  - COSMO and QMMM interface


Version 1.1 alpha-2 (2016-3-8):
* Added
  - CCSD(T) and CCSD(T) gradients
  - General JK contraction function
  - HF Hessian
  - DFT Hessian
  - Function to symmetrize given orbital space
  - General XC functional evaluator (using Libxc or Xcfun)
  - Intrinsic Atomic Orbital (IAO)
* Modify
  - NEVPT interface
  - Default DFT pruning scheme
  - Improving linear dependence issue for X2C module
* Bug fixing
  - CCSD density matrix
  - Atomic radii for DFT grids
  - Handling h function for molden
  - Projecting CASSCF initial guess from orbitals of different shape

Version 1.1 alpha-1 (2016-2-8):
* Added
  - CCSD gradients
  - DMRG-NEVPT2 interface
  - DFT gradients
  - TDDFT and TDDFT gradients
  - DFT NMR
  - COSMO interface
  - QM/MM interface
  - Pipek-Mezey localization
  - DF-CASSCF
  - State-specific CASSCF for excited states
  - Stream operations: apply, run, set
  - General basis value evaluator
  - DMRG (Block) examples
* Modify
  - Default DFT grids schemes (grid density, prune etc)

