@@ -9,7 +9,8 @@ See Also:
 import time
 import numpy
 import pyscf.dft
-from pyscf.pbc.scf import hf as pbchf
+from pyscf import lib
+from pyscf.pbc.scf import uhf as pbcuhf
 from pyscf.lib import logger
 from pyscf.pbc.dft import gen_grid
 from pyscf.pbc.dft import numint
@@ -17,23 +18,8 @@ from pyscf.pbc.dft import numint
 
 def get_veff(ks, cell=None, dm=None, dm_last=0, vhf_last=0, hermi=1,
              kpt=None, kpt_band=None):
-    '''Coulomb + XC functional
-
-    .. note::
-        This function will change the ks object.
-
-    Args:
-        ks : an instance of :class:`RKS`
-            XC functional are controlled by ks.xc attribute.  Attribute
-            ks.grids might be initialized.  The ._exc and ._ecoul attributes
-            will be updated after return.  Attributes ._dm_last, ._vj_last and
-            ._vk_last might be changed if direct SCF method is applied.
-        dm : ndarray or list of ndarrays
-            A density matrix or a list of density matrices
-
-    Returns:
-        matrix Veff = J + Vxc.  Veff can be a list matrices, if the input
-        dm is a list of density matrices.
+    '''Coulomb + XC functional for UKS.  See pyscf/pbc/dft/uks.py
+    :func:`get_veff` fore more details.
     '''
     if cell is None: cell = ks.cell
     if dm is None: dm = ks.make_rdm1()
@@ -48,28 +34,31 @@ def get_veff(ks, cell=None, dm=None, dm_last=0, vhf_last=0, hermi=1,
 
     dm = numpy.asarray(dm)
     nao = dm.shape[-1]
-    ground_state = (dm.ndim == 2)
+    # ndim = 3 : dm.shape = (alpha_beta, nao, nao)
+    ground_state = (dm.ndim == 3)
 
     if hermi == 2:  # because rho = 0
         n, ks._exc, vx = 0, 0, 0
     else:
-        n, ks._exc, vx = ks._numint.nr_rks(cell, ks.grids, ks.xc, dm, 1,
+        n, ks._exc, vx = ks._numint.nr_uks(cell, ks.grids, ks.xc, dm, 1,
                                            kpt, kpt_band)
         logger.debug(ks, 'nelec by numeric integration = %s', n)
         t0 = logger.timer(ks, 'vxc', *t0)
 
     hyb = ks._numint.hybrid_coeff(ks.xc, spin=(cell.spin>0)+1)
     if abs(hyb) < 1e-10:
-        vhf = vj = ks.get_j(cell, dm, hermi, kpt, kpt_band)
+        vj = ks.get_j(cell, dm, hermi, kpt, kpt_band)
+        vhf = lib.asarray([vj[0]+vj[1]] * 2)
     else:
         vj, vk = ks.get_jk(cell, dm, hermi, kpt, kpt_band)
-        vhf = vj - vk * (hyb * .5)
+        vhf = pbcuhf._makevhf(vj, vk*hyb)
 
         if ground_state:
-            ks._exc -= numpy.einsum('ij,ji', dm, vk).real * .5 * hyb*.5
+            ks._exc -=(numpy.einsum('ij,ji', dm[0], vk[0]) +
+                       numpy.einsum('ij,ji', dm[1], vk[1])).real * .5 * hyb
 
     if ground_state:
-        ks._ecoul = numpy.einsum('ij,ji', dm, vj).real * .5
+        ks._ecoul = numpy.einsum('ij,ji', dm[0]+dm[1], vj[0]+vj[1]).real * .5
 
     if small_rho_cutoff > 1e-20 and ground_state:
         # Filter grids the first time setup grids
@@ -83,15 +72,15 @@ def get_veff(ks, cell=None, dm=None, dm_last=0, vhf_last=0, hermi=1,
     return vhf + vx
 
 
-class RKS(pbchf.RHF):
-    '''RKS class adapted for PBCs. 
+class UKS(pbcuhf.UHF):
+    '''UKS class adapted for PBCs. 
     
-    This is a literal duplication of the molecular RKS class with some `mol`
+    This is a literal duplication of the molecular UKS class with some `mol`
     variables replaced by `cell`.
 
     '''
     def __init__(self, cell, kpt=numpy.zeros(3)):
-        pbchf.RHF.__init__(self, cell, kpt)
+        pbcuhf.UHF.__init__(self, cell, kpt)
         self.xc = 'LDA,VWN'
         self.grids = gen_grid.UniformGrids(cell)
         self.small_rho_cutoff = 1e-7  # Use rho to filter grids
@@ -103,7 +92,7 @@ class RKS(pbchf.RHF):
         self._keys = self._keys.union(['xc', 'grids', 'small_rho_cutoff'])
 
     def dump_flags(self):
-        pbchf.RHF.dump_flags(self)
+        pbcuhf.UHF.dump_flags(self)
         logger.info(self, 'XC functionals = %s', self.xc)
         self.grids.dump_flags()
 
@@ -118,5 +107,5 @@ class RKS(pbchf.RHF):
             self.with_df.kpts = x.reshape(-1,3)
 
     get_veff = get_veff
-    energy_elec = pyscf.dft.rks.energy_elec
+    energy_elec = pyscf.dft.uks.energy_elec
 
